--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,7 @@
   "name": "angularjs-tckno",
   "version":"1.0.0",
   "description": "Angular Tc No",
-  "main": [
-    "custom.js",
-  ],
+  "main": "custom.js",
   "homepage": "",
   "ignore": [
     "**/.*",
